[project]
name = "opc-lab"
version = "0.2.0"
description = "Native IIoT System: OPC UA Data Acquisition & Soft-PLC Control"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncua>=1.1.8",
    "numpy==2.4.2",
    "pandas==3.0.0",
    "psycopg>=3.3.2",
    "psycopg-pool==3.3.0",
    "marimo>=0.8.0",
    "altair>=5.3.0",
    "psutil>=6.0.0",
]
